--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="media/Rectangle 8.svg">
         <img src="media/Rectangle 7.svg">
     </section>
-    <content class="registration" method="post" action="#">
-        <form>
+    <content class="registration">
+        <form  method="post" action="#">
             <div class="heading">
                 <h1>Create An Account</h1>
                 <p>Create an account to enjoy all the services without any ads for free!</p>
