--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <button type="submit">Create Account</button>
             <p class="signIn">Already Have An Account? <a href="#"> Sign in</a></p>
         </form>
-    </content>
+	<!-- Hello man -->
+ </content>
 </body>
 </html>
